--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
         "deploy_m": "vite build && npm run send_vite_build && npm run pull_rep && npm run optimize_all"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
+        "axios": "^1.7.7",
         "laravel-vite-plugin": "^1.0.0",
         "sass": "^1.78.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.3",
-        "gsap": "^3.12.5"
+        "gsap": "^3.12.5",
+        "v-slim-mask": "^1.0.24",
+        "vue-axios": "^3.5.2"
     }
 }
